# quickstart-sample

./: .env.sample  .gitignore  CLAUDE.md  LICENSE  README.md  justfile
.github/: CODEOWNERS
.github/scripts/: browserstack-test.py
.github/workflows/: android-cpp-browserstack.yml  javascript-web-browserstack.yml  pr-checks.yml  react-native-ci.yml  react-native-expo-ci.yml  swift-ci.yml
android-cpp/: README.md
android-cpp/QuickStartTasksCPP/: settings.gradle.kts
android-cpp/QuickStartTasksCPP/app/: build.gradle.kts
android-java/: README.md  settings.gradle.kts
android-java/app/: build.gradle.kts
android-java/gradle/: libs.versions.toml
android-kotlin/: README.md
android-kotlin/QuickStartTasks/: settings.gradle.kts
cpp-tui/: README.md
cpp-tui/taskscpp/: CMakeLists.txt  Makefile
cpp-tui/taskscpp/scripts/: generate_env.awk
cpp-tui/taskscpp/sdk/: .gitignore  README.md
cpp-tui/taskscpp/src/: main.cpp  task.cpp  task.h  tasks_peer.cpp  tasks_peer.h  tasks_tui.cpp  tasks_tui.h  transform_container.h
dotnet-maui/: README.md
dotnet-maui/DittoMauiTasksApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  DittoMauiTasksApp.csproj  DittoMauiTasksApp.sln  MauiProgram.cs
dotnet-maui/DittoMauiTasksApp/Model/: DittoTask.cs
dotnet-tui/: README.md
dotnet-tui/DittoDotNetTasksConsole/: DittoDotNetTasksConsole.csproj  Program.cs  TasksPeer.cs  TasksWindow.cs  ToDoTask.cs
dotnet-winforms/: .gitignore  README.md
dotnet-winforms/TasksApp/: AboutForm.Designer.cs  AboutForm.cs  AboutForm.resx  DittoTasksApp.csproj  DittoTasksApp.sln  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  TasksPeer.cs  ToDoTask.cs  ToDoTaskEditorForm.Designer.cs  ToDoTaskEditorForm.cs
edge-server/: README.md  justfile  quickstart_config_sample.yaml
edge-server/requests/: create.json  delete.json  get.json  update.json
flutter_app/: .gitignore  README.md  pubspec.yaml
flutter_app/android/: gradle.properties  settings.gradle
flutter_app/lib/: dialog.dart  dql_builder.dart  main.dart  task.dart  task.g.dart
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
java-spring/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
javascript-tui/: .editorconfig  .gitignore  README.md  package-lock.json  package.json  prettier.config.js
javascript-tui/source/: app.js  cli.js
javascript-web/: README.md  eslint.config.js  package-lock.json  package.json  prettier.config.js  vite.config.ts
javascript-web/src/: App.css  App.tsx
kotlin-multiplatform/: .gitignore  README.md  gradle.properties  settings.gradle.kts
kotlin-multiplatform/.run/: composeApp [desktop].run.xml
kotlin-multiplatform/build-logic/: settings.gradle.kts
kotlin-multiplatform/composeApp/: build.gradle.kts
kotlin-multiplatform/gradle/: libs.versions.toml
react-native/: App.tsx  README.md  babel.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
react-native-expo/: .gitignore  App.tsx  README.md  app.json  babel.config.js  main.tsx  metro.config.js  package.json  tsconfig.json
react-native-expo/android/: gradle.properties  settings.gradle
react-native-expo/components/: EditTaskModal.tsx  Fab.tsx  NewTaskModal.tsx
react-native-expo/ios/: Podfile
react-native-expo/types/: env.d.ts
react-native/components/: DittoInfo.tsx  DittoSync.tsx  EditTaskModal.tsx  Fab.tsx  NewTaskModal.tsx  TaskDone.tsx
react-native/ios/: AppDelegate.swift  Podfile
react-native/macos/: Podfile
react-native/types/: env.d.ts
rust-tui/: Cargo.toml  README.md
rust-tui/src/: input.rs  lib.rs  term.rs
rust-tui/src/tui/: mod.rs  todolist.rs
scripts/: README.md  bump-quickstarts
spring-quickstart-java/: README.md
swift/: .swiftlint.yml  README.md  buildEnv.sh
swift/Tasks/: DittoManager.swift  TaskModel.swift  TaskRow.swift  TasksApp.swift  TasksListScreen.swift
swift/Tasks.xcodeproj/: project.pbxproj
(+165 files in other folders)
